VZDEV/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>CCPM_masterLeadProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Eligible</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Responded</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CCPM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Existing customer for whom abandoned cart has been created</description>
        <label>Account Holder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_ActualSMSScheduleDateTime__c</fullName>
        <label>Actual SMS Schedule Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_AutoResponseForDoubleOptOutSmsSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoResponse For Double Opt Out Sms Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_CampingFollowUpMessageTemplate__c</fullName>
        <label>Camping FollowUp Message Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Converted_Date__c</fullName>
        <formula>CCPM_convertedDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_CreatedType__c</fullName>
        <inlineHelpText>This represents the initial type of the lead or prospect upon creation</inlineHelpText>
        <label>Created Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Created_In_vs_Converted_In_Channel__c</fullName>
        <description>Formula field for report grouping based on Lead source and closed lead channel.</description>
        <formula>CASE( CCPM_leadChannel__c , 
     &quot;Digital&quot;, 
     CASE( CCPM_closedLeadChannel__c , 
          &quot;Digital&quot;,&quot;Created = Digital &amp; Converted = Digital&quot;,
          &quot;Retail&quot;,&quot;Created = Digital &amp; Converted = Retail&quot;,
          &quot;&quot;
          ),
     &quot;Retail&quot;,
     CASE( CCPM_closedLeadChannel__c , 
          &quot;Digital&quot;,&quot;Created = Retail &amp; Converted = Digital&quot;,
          &quot;Retail&quot;,&quot;Created = Retail &amp; Converted = Retail&quot;,
          &quot;&quot;
          ),
     &quot;&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created In vs Converted In Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Created_Lead_Source__c</fullName>
        <inlineHelpText>This represents the initial source system upon lead or prospect creation</inlineHelpText>
        <label>Created Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NETACE</fullName>
                </value>
                <value>
                    <fullName>Quote-Retail</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-DESK</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MIPP</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MAPP</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MDOT</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-TDOT</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGDESK</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGMOB</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGTAB</fullName>
                </value>
                <value>
                    <fullName>MFRAPP</fullName>
                </value>
                <value>
                    <fullName>DOTCOM</fullName>
                </value>
                <value>
                    <fullName>ONEPOS</fullName>
                </value>
                <value>
                    <fullName>Quote-Telesales</fullName>
                </value>
                <value>
                    <fullName>EROES</fullName>
                </value>
                <value>
                    <fullName>ACSS</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>NR-BBDT</fullName>
                </value>
                <value>
                    <fullName>NR-BEST</fullName>
                </value>
                <value>
                    <fullName>NR-APPL</fullName>
                </value>
                <value>
                    <fullName>NR-TARG</fullName>
                </value>
                <value>
                    <fullName>NR-APDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_CustomerResponseMessageBody__c</fullName>
        <formula>&apos;Ok, Thanks! (FreeVzMsg)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Response Message Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_CustomerResponseMsgBodyforProsp__c</fullName>
        <formula>&apos;Ok, Thanks!&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Response Msg Body for Prosp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_DismissedChannel__c</fullName>
        <label>Dismissed Channel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_DismissedLead__c</fullName>
        <description>This field is created to reference in Apex for checking dismissed Leads.</description>
        <formula>AND(CCPM_IsCartDismissed__c, 
CCPM_DismissedChannel__c == &apos;Digital&apos;, 
OR(RecordType.Name == &apos;Customer Cart&apos;,RecordType.Name == &apos;Prospect Cart&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DismissedLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_DismissedSource__c</fullName>
        <label>Dismissed Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_DoubleOptOutSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Opt Out Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_DoubleOptOutSmsBody__c</fullName>
        <formula>&apos;Thank you. You have been unsubscribed from this message. If you wish to be removed from all future marketing messages from VZ, reply &quot;X&quot;.(FreeVzMsg)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Double Opt Out Sms Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_HotFixFlagToSendInitialSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HotFix Flag To Send Initial SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_IsCartDismissed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cart Dismissed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_Last_Interaction_Before_Closed__c</fullName>
        <inlineHelpText>This field will be updated with the value of Last Interaction Date/Time field only when the Status of the Lead is either (New,Eligible,Contacted,Responded or Qualified)</inlineHelpText>
        <label>Last Interaction Before Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_Lead_status_substatus__c</fullName>
        <formula>TEXT(Status) &amp; &quot;-&quot; &amp; TEXT(CCPM_leadSubStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead status-substatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_LifeTimeofContactedLead__c</fullName>
        <description>Life Time of a Contacted Lead</description>
        <formula>IF(
(ISBLANK(CCPM_TimeStampForRespondedLead__c)),
((CCPM_TimeStampForClosedLead__c - CCPM_TimeStampForContactedLead__c ) *24 ), 
( CCPM_TimeStampForRespondedLead__c - CCPM_TimeStampForContactedLead__c ) *24 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Time of Contacted Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_LifeTimeofEligibleLead__c</fullName>
        <description>Life Time of an eligible Lead</description>
        <formula>IF(
(ISBLANK(CCPM_TimeStampForContactedLead__c)),
((CCPM_TimeStampForClosedLead__c - CCPM_TimeStampForEligibleLead__c ) *24 ), 
( CCPM_TimeStampForContactedLead__c - CCPM_TimeStampForEligibleLead__c ) *24 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Time of Eligible Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_LifeTimeofNewLead__c</fullName>
        <description>Life Time of a New Lead</description>
        <formula>IF(ISBLANK(CCPM_TimeStampForEligibleLead__c),0,( CCPM_TimeStampForEligibleLead__c  -  CreatedDate)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Time of New Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_LifeTimeofQualifiedLead__c</fullName>
        <description>Life Time of a qualified Lead</description>
        <formula>IF( 
(ISBLANK(CCPM_TimeStampForClosedLead__c)),0,
((CCPM_TimeStampForClosedLead__c - CCPM_TimeStampForQualifiedLead__c ) *24 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Time of Qualified Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_LifeTimeofRespondedLead__c</fullName>
        <description>Life Time of an Expired Lead</description>
        <formula>IF( 
(ISBLANK(CCPM_TimeStampForQualifiedLead__c)), 
((CCPM_TimeStampForClosedLead__c - CCPM_TimeStampForRespondedLead__c ) *24 ), 
( CCPM_TimeStampForQualifiedLead__c - CCPM_TimeStampForRespondedLead__c ) *24 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Time of Responded Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_ManuallyChangeOwnershipMessage__c</fullName>
        <formula>&quot;Hi &quot;+ CCPM_ownerFirstName__c+&quot;, lead &quot;+ FirstName + &quot; &quot; + LastName + &quot; has been reassigned to you and needs follow up. Please login to Salesforce and view &apos;Leads Requiring Action&apos; report.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manually Change Ownership Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSCategory__c</fullName>
        <formula>IF((TODAY()- CCPM_Account__r.CCPM_NPSDateSurveyCompleted__c)&lt; 90, CCPM_Account__r.CCPM_NPSCategory__c, &apos;&apos;)</formula>
        <inlineHelpText>Customer grouping based on the NPS score (Promoter, Passive, Detractor)</inlineHelpText>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSDateSurveyCompleted__c</fullName>
        <formula>IF((TODAY()- CCPM_Account__r.CCPM_NPSDateSurveyCompleted__c)&lt; 90,(CCPM_Account__r.CCPM_NPSDateSurveyCompleted__c), null)</formula>
        <label>Date Survey Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSScore__c</fullName>
        <formula>IF((TODAY()- CCPM_Account__r.CCPM_NPSDateSurveyCompleted__c)&lt; 90, CCPM_Account__r.CCPM_NPSScore__c, 0.0)</formula>
        <inlineHelpText>Net Promoter Score last entered from the account. Note this may not be associated with this MTN.</inlineHelpText>
        <label>NPS Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_NPSmobileNumber__c</fullName>
        <formula>IF((TODAY() - CCPM_Account__r.CCPM_NPSDateSurveyCompleted__c)&lt; 90, CCPM_Account__r.CCPM_NPSmobileNumber__c, &apos;&apos;)</formula>
        <inlineHelpText>MTN of the line that completed the survey for the account</inlineHelpText>
        <label>Survey MTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IF( ISBLANK(FirstName) , LastName , LastName &amp; &quot;,&quot; &amp;&quot; &quot;&amp; FirstName))</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_ProspectFollowUpSMSBody__c</fullName>
        <formula>&quot;Hi, this is &quot; + Owner:User.FirstName + &quot; from VZW &quot; + Store__r.Name + &quot;.&quot; + &quot; Come and visit to chat about the items you inquired about, between &quot; + Store__r.CCPM_recommendedVisitingHours__c + &quot;.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Follow Up SMS Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_QuoteID__c</fullName>
        <inlineHelpText>IDs of the quotes associated to this lead</inlineHelpText>
        <label>Quote ID</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_QuoteLinks__c</fullName>
        <label>Quote Links</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_QuoteNotes__c</fullName>
        <inlineHelpText>IDs ands SKUs of the products that are in the leads quotes</inlineHelpText>
        <label>Quote Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_ReasonForVisit__c</fullName>
        <description>This field represents the list or reasons for the Leads visit to the store</description>
        <inlineHelpText>This field represents the list or reasons for the Leads visit to the store</inlineHelpText>
        <label>Reason for Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales-New Customer Service</fullName>
                </value>
                <value>
                    <fullName>Sales-Upgrade</fullName>
                </value>
                <value>
                    <fullName>Sales-Add a Line</fullName>
                </value>
                <value>
                    <fullName>Sales-Accessories</fullName>
                </value>
                <value>
                    <fullName>Device-Device Help</fullName>
                </value>
                <value>
                    <fullName>Device-Warranty Services</fullName>
                </value>
                <value>
                    <fullName>Device-Software updates</fullName>
                </value>
                <value>
                    <fullName>Device-Content Transfer</fullName>
                </value>
                <value>
                    <fullName>Bill Payments</fullName>
                </value>
                <value>
                    <fullName>Bill Account Inquiry</fullName>
                </value>
                <value>
                    <fullName>About my Account</fullName>
                </value>
                <value>
                    <fullName>Refund/Exchange</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_SKU__c</fullName>
        <description>Product SKU&apos;s in the cart</description>
        <inlineHelpText>IDs of the products that are in the individual&apos;s cart&apos;</inlineHelpText>
        <label>SKU</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSCustomerLegalOptin__c</fullName>
        <defaultValue>&quot;By checking this box and clicking submit, I agree that Verizon may and use automated technology to call or text my cellphone and/or may send me offers via email.&quot;</defaultValue>
        <description>By checking this box and clicking submit, I agree that Verizon may and use automated technology to call or text my cellphone and/or may send me offers via email.</description>
        <label>Messaging consent</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSFollowUpDate__c</fullName>
        <inlineHelpText>The date &amp; time for the SMS to be scheduled to be sent</inlineHelpText>
        <label>SMS Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSLegalOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSResponseBodyForOptOut__c</fullName>
        <formula>&quot;FreeVzMsg: Your request will be processed&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Response Body for OptOut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSResponseBodyForProspect__c</fullName>
        <description>Holds the response which needs to go out if any response of received on initial or follow-up sms</description>
        <formula>&quot;I just received your text, if your text requires a response, I will get back to you shortly. Thanks.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Response Body for Prospects</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSResponseBody__c</fullName>
        <description>Holds the response which needs to go out if any response of received on initial or follow-up sms</description>
        <formula>&quot;I just received your text, if your text requires a response, I will get back to you shortly. Thanks.(FreeVzMsg)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Response Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_SMSResponseReceivedDateTime__c</fullName>
        <description>Holds the date/time when SMS response was received</description>
        <label>SMS Response Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_StoreTimeZone__c</fullName>
        <label>Store Time Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampForClosedLead__c</fullName>
        <description>Stores the time when the lead status is marked Closed</description>
        <label>Time Stamp For Closed Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampForContactedLead__c</fullName>
        <description>Stores the time when the lead status is marked Contacted</description>
        <label>Time Stamp For Contacted Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampForEligibleLead__c</fullName>
        <description>Stores the time when the lead status is marked eligible</description>
        <label>Time Stamp For Eligible Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampForQualifiedLead__c</fullName>
        <description>Stores the time when the lead status is marked Qualified</description>
        <label>Time Stamp For Qualified Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampForRespondedActionReqLead__c</fullName>
        <description>Stores the time when the lead status is marked Responded - Action Required</description>
        <label>Time Stamp For Responded Action Req Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampForRespondedLead__c</fullName>
        <description>Stores the time when the lead status is marked Responded</description>
        <label>Time Stamp For Responded Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampForRespondedOptedOutLead__c</fullName>
        <description>Stores the time when the lead status is marked Responded- OptedOut</description>
        <label>Time Stamp For Responded OptedOut Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampQualifiedAptScheduledLead__c</fullName>
        <description>Stores the time when the lead status is marked Qualified Appointment Scheduled</description>
        <label>TimeStamp Qualified AptScheduled Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampQualifiedDisinterestedLead__c</fullName>
        <description>Stores the time when the lead status is marked Qualified Disinterested</description>
        <label>Time Stamp Qualified Disinterested Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampQualifiedInDiscussionLead__c</fullName>
        <description>Stores the time when the lead status is marked Qualified in Discussion</description>
        <label>TimeStamp For QualifiedInDiscussion Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampQualifiedServiceIssueLead__c</fullName>
        <description>Stores the time when the lead status is marked Qualified Service Issue</description>
        <label>TimeStamp Qualified Service Issue Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeStampQualifiedStoreReassignLead__c</fullName>
        <description>Stores the time when the lead status is marked Qualified Needs Store Reassignment</description>
        <label>TimeStamp Qualified StoreReassign Lead</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_TimetoConvertAfterContact__c</fullName>
        <formula>((CCPM_convertedDateTime__c -  CCPM_initialSMSSentDateTime__c)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Convert After Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_TimetoConvertAfterQualification__c</fullName>
        <formula>((CCPM_convertedDateTime__c -  CCPM_initialSMSSentDateTime__c)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Convert After Qualification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_Trans_Completion_Channel_Preference__c</fullName>
        <inlineHelpText>Do they prefer to transact In-Store or Online</inlineHelpText>
        <label>Trans Completion Channel Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-store</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_TriggerInitialSMSDateTimePartII__c</fullName>
        <description>Adds 60 seconds to date/time when initial SMS was to be triggered so that SMS&apos;s arrive in sequence</description>
        <formula>CCPM_triggerInitialSMSDateTime__c +((60/3600)/24)</formula>
        <label>Trigger Initial SMS Date/Time Part II</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_Type__c</fullName>
        <description>Type</description>
        <formula>IF(OR(AND(RecordType.Name = &apos;Customer Cart&apos; ,CCPM_isManualLead__c = true),ISPICKVAL(CCPM_leadType__c,&apos;Customer SFDC Manual&apos;),ISPICKVAL(CCPM_leadType__c,&apos;Customer POS Manual&apos;),ISPICKVAL(CCPM_leadType__c,&apos;Customer Telesales POS Manual&apos;),ISPICKVAL(CCPM_leadType__c,&apos;Customer Telesales SFDC Manual&apos;)),&apos;Manual Lead&apos;, 
IF(OR(CONTAINS(TEXT(LeadSource), &quot;CRM&quot;),ISPICKVAL(CCPM_leadType__c,&apos;Customer Campaign&apos;)),&apos;Campaign Lead&apos;, 
IF(OR(CONTAINS(TEXT(CCPM_leadType__c),&quot;Customer Abandoned Cart&quot;), AND(RecordType.Name = &apos;Customer Cart&apos; ,CCPM_isManualLead__c = false)),&apos;Lead&apos;, 
IF(ISPICKVAL(CCPM_leadType__c,&apos;Customer Abandoned Visit&apos;),&apos;Abandoned Visit Lead&apos;, 
IF(ISPICKVAL(CCPM_leadType__c,&apos;Customer Quotes&apos;),&apos;Quote Lead&apos;, 
IF(OR(ISPICKVAL(CCPM_leadType__c,&apos;Prospect SFDC Manual&apos;),CONTAINS(TEXT(CCPM_leadType__c),&quot;Prospect Abandoned Cart&quot;),ISPICKVAL(CCPM_leadType__c,&apos;Prospect Telesales SFDC Manual&apos;), RecordType.Name = &apos;Prospect Cart&apos;, RecordType.Name = &apos;Prospect&apos;),&apos;Prospect&apos;, 
&apos;&apos; ))))))</formula>
        <inlineHelpText>Type of lead or prospect based on how it entered Salesforce</inlineHelpText>
        <label>Current Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_UpdateAccountOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateAccountOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_abandonedDate__c</fullName>
        <description>This field represents the date when the Lead Checked in to the store</description>
        <inlineHelpText>This field represents the date when the Lead Checked in to the store</inlineHelpText>
        <label>Abandoned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_accountNumber__c</fullName>
        <description>Account Number is the customer&apos;s account which could have multiple lines and multiple carts</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Account number for this mobile number</inlineHelpText>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_accountUniqueID__c</fullName>
        <description>Unique identifier of customer generated in staging(Oracle) based on account number. This unique identifier will always be same based on account number so that we can use this key for upsert logic</description>
        <externalId>true</externalId>
        <label>Account Unique ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_cartID__c</fullName>
        <description>Unique reference id of the cart</description>
        <externalId>true</externalId>
        <label>Cart ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_cartModifiedDate__c</fullName>
        <label>Cart Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_cartStatus__c</fullName>
        <description>Status of the cart</description>
        <label>Cart Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_cartTypeProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cart Type Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_cartType__c</fullName>
        <description>PRP (feature change) | ACC (accessory only) | AAL (add a line) | EUP (equipment upgrade) | NEW (new customer order)</description>
        <inlineHelpText>PRP (feature change) | ACC (accessory only) | AAL (add a line) | EUP (equipment upgrade) | NEW (new customer order)</inlineHelpText>
        <label>Cart Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_cartUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Identified to create/update carts(leads). The format will be &apos;A:&apos;+Account Number&apos; +&apos;-M:&apos; + Mobile Number + &apos;-S:&apos; + Lead Status. This field will be used to upset leads in Salesforce for carts (leads) for existing customers.</description>
        <externalId>true</externalId>
        <label>Cart Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCPM_cartlastHandledBy__c</fullName>
        <description>ID of the rep who last handled the cart</description>
        <label>Cart Last Handled By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_changeOwnershipAssignmentMsgBody__c</fullName>
        <description>Content of the SMS which needs to be sent to user who has been assigned the lead</description>
        <formula>&quot;An employee is no longer assigned to this location and you are now receiving their leads. Please review the leads requiring action to review actionable leads.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Ownership Assignment Message Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_closedLeadChannel__c</fullName>
        <description>IF the &apos;Converted Lead Source&apos; field value equals ATG-ECOM-DESK or ATG-ECOM-GGDESK or ATG-ECOM-GGMOB or ATG-ECOM-GGTAB or ATG-ECOM-MAPP or ATG-ECOM-MDOT or ATG-ECOM-MIPP or ATG-ECOM-TDOT then &apos;Converted Lead Channel&apos; should be set as &apos;Digital&apos; 
IF the &apos;Converted Lead Source&apos; field value equals NETACE then &apos;Converted Lead Channel&apos; should be set as &apos;Retail&apos;</description>
        <formula>IF( AND( OR ( ISPICKVAL(Status , &apos;Converted&apos;) , ISPICKVAL(Status,&apos;Dismissed&apos;)), ISPICKVAL(CCPM_closedLeadSource__c , &apos;&apos;)), &apos;Unknown&apos;, IF (ISPICKVAL(CCPM_closedLeadSource__c , &apos;NETACE&apos;), &apos;Retail&apos;, IF (ISPICKVAL(CCPM_closedLeadSource__c , &apos;ONEPOS&apos;), &apos;ONEPOS&apos;, IF(NOT(ISPICKVAL(CCPM_closedLeadSource__c , &apos;&apos;)), &apos;Digital&apos;, &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The channel the prospect converted their cart in.</inlineHelpText>
        <label>Closed Lead Channel(DO NOT USE)</label>
        <type>Text</type>
    </fields>
</CustomObject>